--- a/style.css
+++ b/style.css
@@ -1,1 +1,34 @@
+.conteiner {
+  width: 620px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
+.header {
+  padding: 20px 0;
+}
+.photo,
+.author {
+  display: inline-block;
+}
+
+.author {
+  margin-left: 15px;
+  vertical-align: top;
+}
+.info_box span {
+  color: #95a5a6;
+}
+
+h2 {
+  color: #2c3e50;
+}
+h3 {
+  text-align: center;
+}
+p {
+  font-size: 18px;
+}
+li {
+  font-size: 18px;
+}
